work/66/Chain_Java/compile_stderr.txt
unknown_0.java:3: error: class, interface, or enum expected
no_class HelloWorldApp {
^
unknown_0.java:4: error: class, interface, or enum expected
	  public static void main(String[] args) {
	                ^
unknown_0.java:6: error: class, interface, or enum expected
    }
    ^
unknown_1.java:3: error: class, interface, or enum expected
public no_class HelloWorldPerformer {
       ^
unknown_1.java:4: error: class, interface, or enum expected
    public static void perform() {
                  ^
unknown_1.java:6: error: class, interface, or enum expected
    }
    ^
6 errors
